Added sonar config to pom and build.yml