@@ -69,6 +69,7 @@
         <dependency.spock.version>1.3-groovy-2.4</dependency.spock.version>
         <junit.version>4.12</junit.version>
         <trimStackTrace>false</trimStackTrace>
+        <argLine></argLine>
     </properties>
 
 
@@ -285,6 +286,8 @@
                 </dependencies>
                 <configuration>
                     <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                    <!-- CDILiquibaseTest is currently failing without this setting -->
+                    <argLine>@{argLine} --illegal-access=permit</argLine>
                 </configuration>
             </plugin>
 
@@ -421,8 +424,6 @@
             </activation>
             <properties>
                 <maven.compiler.release>8</maven.compiler.release>
-                <!-- CDILiquibaseTest is currently failing without this setting -->
-<!--                <argLine>&#45;&#45;illegal-access=permit</argLine>-->
             </properties>
         </profile>
         <profile>
